--- a/float_layout/css/1.css
+++ b/float_layout/css/1.css
@@ -11,7 +11,30 @@ main {
 .box {
     float: left;
     width: 30%;
-    background:  red;
-    margin: 10px;
     padding:  20px;
+    height:  350px;
+}
+
+.box.box3 {
+    float: right;
+}
+
+.box.box2 {
+    float: left;
+    width: 40%;
+    padding: 0px;
+}
+
+.box.box1 {}
+
+.box1, .box3 {
+    background:  red;
+}
+
+.box2 p {
+    background:  red;
+    padding:  20px;
+    height:  100%;
+    margin-top:  0;
+    margin: 0px 20px;
 }
